<resources>


    <string name="app_name">Departmental Library Inventory</string>

    <string name="empty_view_textview">Get started by adding a book</string>

    <string name="label_product_overview">Book Overview</string>
    <string name="edit_product_name">Book Name</string>
    <string name="edit_product_subject">Subject</string>
    <string name="edit_price">Unit Price</string>
    <string name="edit_quantity">Quantity</string>
    <string name="label_supplier_overview">Supplier Overview</string>
    <string name="edit_supplier_name">Supplier Name</string>
    <string name="edit_uniquebook">Unique Id</string>
    <string name="button_minus_sign">-</string>
    <string name="button_plus_sign">+</string>
    <string name="minimum_quantity">0</string>

    <string name="action_save">Save</string>
    <string name="action_borrow">Borrow</string>
    <!--<string name="action_contact_supplier">Contact Supplier</string>-->
    <string name="action_delete">Delete</string>

    <string name="label_price">Price:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="price_for_single_item">(Price for single item)</string>
    <string name="button_sale">Issue</string>


    <string name="error_while_deleting_products">Error while deleting books</string>
    <string name="all_products_deleted">All books deleted</string>
    <string name="delete_all_products">Delete all books</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>


    <string name="add_a_product">Add a Book</string>
    <string name="edit_product">Edit Book</string>
    <string name="required">Required</string>
    <string name="price_cannot_be_negative">Price cannot be negative</string>
    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>
    <string name="editor_insert_product_failed">Error while saving book</string>
    <string name="editor_insert_product_successful">Book Saved</string>
    <string name="editor_update_product_failed">Error with updating book</string>
    <string name="editor_update_product_successful">Book Updated</string>
    <string name="error_deleting_product">Error while deleting book</string>
    <string name="product_deleted">Book Deleted</string>
    <string name="discard_changes_and_quit_editing">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_this_product">Delete this book?</string>
</resources>
